# hf-chatbot-demo

./: .gitignore  DEVELOPMENT.md  PYTORCH_SETUP.md  README.md  README_SPACE.md  app.py  faq.md  pyproject.toml  requirements.txt  upload_to_hf.py
scripts/: __init__.py  build.py  install_torch.py  upload.py
src/chatbot/: __init__.py  app.py  rag.py  rate_limiter.py
tests/: __init__.py  test_app.py  test_rag.py  test_rate_limiter.py
